logs/strictdict.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/strictdict'...
Listing './lib/python3.5/site-packages/strictdict/api'...
Listing './lib/python3.5/site-packages/strictdict/fields'...
Listing './lib/python3.5/site-packages/strictdict/simplifiers'...
Listing './lib/python3.5/site-packages/strictdict/strictbase'...
Listing './lib/python3.5/site-packages/strictdict/tests'...
Compiling './lib/python3.5/site-packages/strictdict/tests/test_strict_dict.py'...
***   File "./lib/python3.5/site-packages/strictdict/tests/test_strict_dict.py", line 345
    print v1.field1
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/strictdict/validators'...
Compiling './lib/python3.5/site-packages/strictdict/validators/__init__.py'...
***   File "./lib/python3.5/site-packages/strictdict/validators/__init__.py", line 36
    except tuple(error_classes), e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/strictdict-0.4.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
